--- a/mem-tools/wiki-material/memory/Makefile
+++ b/mem-tools/wiki-material/memory/Makefile
@@ -4,7 +4,7 @@ PROG=./callocer
 gperf:
 	gcc -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free  -g -ltcmalloc -o $(PROG) $(SRC)
 	-rm /tmp/heapprof
-	HEAPPROFILE=/tmp/heapprof  HEAPCHECK=strict HEAP_CHECK_TEST_POINTER_ALIGNMENT=1   $(PROG)
+	-HEAPPROFILE=/tmp/heapprof  HEAPCHECK=strict   $(PROG)
 	pprof --gv ./callocer /tmp/heapprof*
 
 valgrind:
