--- a/testing/presentation-material/Makefile
+++ b/testing/presentation-material/Makefile
@@ -9,6 +9,9 @@ cunit:
 check:
 	gcc check-max.c simple-math.c -lm  -lcheck -lrt  -pthread -lsubunit -o check-max && ./check-max
 
+assert:
+	gcc assert.c simple-math.c -lm  -lcheck -lrt  -pthread -lsubunit -o assert && ./assert
+
 
 gcov:
 	gcc $(CFLAGS) --coverage -fprofile-arcs -ftest-coverage assert.c simple-math.c -o assert -lm
@@ -19,3 +22,6 @@ lcov: gcov
 	lcov --directory .  --capture --output-file  simple-math.info && genhtml -o coverage simple-math.info 
 
 all: cunit check gcov lcov
+
+clean:
+	rm -fr *.xml *~ *.gcda *.o *.gcno *.info cu-max check-max assert coverage
